--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "npm run build:server && npm run build:client",
     "build:server": "tsc -p server/tsconfig.json",
     "build:client": "vite build",
-    "start": "concurrently \"node dist/server/index.js\" \"npx serve -s dist -p 3000\"",
+    "start": "node dist/server/index.js",
     "lint": "eslint . --ext .ts,.tsx"
   },
   "dependencies": {
@@ -25,6 +25,7 @@
     "express": "^4.21.1",
     "i": "^0.3.7",
     "lucide-react": "^0.344.0",
+    "path": "^0.12.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1"
@@ -48,6 +49,6 @@
     "tsx": "^4.19.1",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2"
+    "vite": "^5.4.19"
   }
 }
