--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@metaplex-foundation/js": "^0.19.5",
+    "@pinata/sdk": "^2.1.0",
     "@solana/spl-token": "^0.4.13",
     "@solana/web3.js": "^1.98.4",
     "axios": "^1.7.7",
@@ -26,6 +27,7 @@
     "i": "^0.3.7",
     "lucide-react": "^0.344.0",
     "path": "^0.12.7",
+    "pinata": "^2.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1"
