--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "lint": "eslint . --ext .ts,.tsx"
   },
   "dependencies": {
-    "@metaplex-foundation/js": "^0.19.5",
+    "@metaplex-foundation/js": "^0.20.0",
+    "@metaplex-foundation/js-plugin-nft-storage": "^0.20.0",
     "@pinata/sdk": "^2.1.0",
     "@solana/spl-token": "^0.4.13",
     "@solana/web3.js": "^1.98.4",
@@ -52,5 +53,8 @@
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.3.0",
     "vite": "^5.4.19"
+  },
+  "resolutions": {
+    "@metaplex-foundation/js": "0.20.0"
   }
 }
