--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "File": "^0.10.2",
+    "fs": "^0.0.1-security",
     "i": "^0.3.7",
     "lucide-react": "^0.344.0",
     "path": "^0.12.7",
@@ -55,6 +57,8 @@
     "vite": "^5.4.19"
   },
   "resolutions": {
-    "@metaplex-foundation/js": "0.20.0"
+    "@metaplex-foundation/js": "0.20.0",
+    "nft.storage": "^7.1.0",
+    "@web-std/fetch": "^4.1.0"
   }
 }
