--- a/package.json
+++ b/package.json
@@ -59,6 +59,6 @@
   "resolutions": {
     "@metaplex-foundation/js": "0.20.0",
     "nft.storage": "^7.1.0",
-    "@web-std/fetch": "^4.1.0"
+    "@web-std/fetch": "3.0.1"
   }
 }
