--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "fs": "^0.0.1-security",
     "i": "^0.3.7",
     "lucide-react": "^0.344.0",
+    "node-fetch": "^3.3.2",
     "path": "^0.12.7",
     "pinata": "^2.5.0",
     "react": "^18.3.1",
