--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "File": "^0.10.2",
     "fs": "^0.0.1-security",
     "i": "^0.3.7",
+    "ipfs-car": "^3.0.0",
     "lucide-react": "^0.344.0",
+    "nft.storage": "^7.2.0",
     "node-fetch": "^3.3.2",
     "path": "^0.12.7",
     "pinata": "^2.5.0",
