--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@solana/spl-token": "^0.4.13",
     "@solana/web3.js": "^1.98.4",
     "axios": "^1.7.7",
+    "buffer": "^6.0.3",
     "concurrently": "^8.2.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -39,6 +40,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@rollup/plugin-inject": "^5.0.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^22.7.4",
